# WasmEdge-go-examples

./: README.md
go_AccessMemory/: README.md  fib.go  fib.wasm  go.mod  run.go  rust_access_memory_lib.wasm
go_AccessMemory/rust_access_memory/: Cargo.toml
go_AccessMemoryTinyGo/: README.md  fib.go  fib.wasm  go.mod  run.go
go_Accumulate/: Cargo.toml  README.md  accumulate.go  go.mod
go_BindgenFuncs/: README.md  bindgen_funcs.go  go.mod  rust_bindgen_funcs_lib.wasm
go_BindgenFuncs/rust_bindgen_funcs/: Cargo.toml
go_BindgenKmeans/: README.md  bindgen_kmeans.go  go.mod  rust_bindgen_kmeans_lib.wasm  rust_bindgen_kmeans_lib_bg.wasm
go_BindgenKmeans/rust_bindgen_kmeans/: Cargo.toml
go_BindgenKmeans/rust_bindgen_kmeans/src/: lib.rs
go_BindgenWasi/: README.md  bindgen_wasi.go  go.mod  rust_bindgen_wasi_lib.wasm
go_BindgenWasi/rust_bindgen_wasi/: Cargo.toml
go_ExternRef/: README.md  externref.go  funcs.wasm  funcs.wat  go.mod
go_HostFunc/: README.md  go.mod  hostfunc.go  rust_host_func.wasm
go_HostFunc/rust_host_func/: Cargo.toml
go_MemoryGreet/: README.md  go.mod  greet_memory.go  rust_memory_greet_lib.wasm
go_MemoryGreet/rust_memory_greet/: Cargo.toml
go_MemoryGreetTinyGo/: README.md  go.mod  greet.go  greet.wasm  greet_memory.go
go_Mobilenet/: README.md  go.mod  mobilenet.go
go_Mobilenet/rust_mobilenet/: Cargo.toml
go_MobilenetBirds/: README.md  go.mod  mobilenet_birds.go
go_MobilenetBirds/rust_mobilenet_birds/: Cargo.toml
go_MobilenetFood/: README.md  go.mod  mobilenet_food.go
go_MobilenetFood/rust_mobilenet_food/: Cargo.toml
go_MobilenetInsects/: README.md  go.mod  mobilenet_insects.go
go_MobilenetInsects/rust_mobilenet_insects/: Cargo.toml
go_MobilenetPlants/: README.md  go.mod  mobilenet_plants.go
go_MobilenetPlants/rust_mobilenet_plants/: Cargo.toml
go_MobilenetPlants/rust_mobilenet_plants/src/: lib.rs
go_ParseImage/: README.md  go.mod  parse_image.go  rust_parseimage.wasm
go_ParseImage/rust_parseimage/: Cargo.toml
go_PrintFibonacci/: README.md  go.mod  print_fibonacci.go
go_ReadFile/: README.md  go.mod  read_file.go
go_ReadFile/rust_readfile/: Cargo.toml
go_TfliteFood/: README.md  go.mod  tflite_food.go
go_TfliteFood/rust_tflite_food/: Cargo.toml
go_TfliteFood/rust_tflite_food/src/: lib.rs
go_ThreadsMandelbrot/: README.md  go.mod  mandelbrot.wasm  threads.go
go_WasmAOT/: README.md  go.mod  wasmAOT  wasmAOT.go
go_mtcnn/: README.md  go.mod  mtcnn.go  rust_mtcnn.wasm
go_mtcnn/rust_mtcnn/: Cargo.toml
go_mtcnn/rust_mtcnn/src/: main.rs
wasmedge-bindgen/go_BindgenFuncs/: README.md  bindgen_funcs.go  go.mod  go.sum  rust_bindgen_funcs_lib.wasm
wasmedge-bindgen/go_Mobilenet/: README.md  go.mod  go.sum  mobilenet.go
wasmedge-bindgen/go_Mobilenet/rust_mobilenet/: Cargo.toml
wasmedge-bindgen/go_Mobilenet/rust_mobilenet/src/: lib.rs
wasmedge-bindgen/go_TfliteFood/: README.md  go.mod  go.sum  tflite_food.go
wasmedge-bindgen/go_TfliteFood/rust_tflite_food/: Cargo.toml
wasmedge-bindgen/go_TfliteFood/rust_tflite_food/src/: lib.rs
(+10 files in other folders)
