[package]
name = "rust_bindgen_kmeans"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[lib]
name = "rust_bindgen_kmeans_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
rkm = { git = "https://github.com/second-state/wasm-learning-deps-rkm" }
ndarray = { version = "0.13.0", features = ["serde"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1.3"
wasm-bindgen = "=0.2.61"
