[package]
name = "rust_mobilenet_plants"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2021"

[lib]
name = "rust_mobilenet_plants_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasmedge-bindgen = "0.4.1"
wasmedge-bindgen-macro = "0.4.1"
wasmedge_tensorflow_interface = "0.3.0"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "0.21.0"
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "^1.0.51"
