[package]
name = "rust_mtcnn"
version = "0.1.0"
authors = ["YiYing He <yiying@secondstate.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge_tensorflow_interface = "0.3.0"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "0.21.0"
